# fyodorov-utils

./: .gitignore  Architecture.md  README.md  bump_agents_lib.sh  bump_util_lib.sh  bump_utils_lib.sh  makefile  pyproject.toml
src/: requirements.txt
src/auth/: auth.py  endpoints.py
src/fyodorov_llm_agents/: requirements.txt
src/fyodorov_llm_agents/agents/: agent.py  base_agent.py  openai.py
src/fyodorov_llm_agents/tools/: tool.py
src/fyodorov_utils/: requirements.txt  service_discovery.py
src/fyodorov_utils/auth/: auth.py  endpoints.py
src/fyodorov_utils/config/: config.py  supabase.py
src/fyodorov_utils/decorators/: logging.py
src/fyodorov_utils/services/: base.py  mcp_tool.py  tool.py  yaml.py
src/fyodorov_utils/templates/: agents.py
