[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fyodorov_utils"
version = "0.4.41"
authors = [
    { name="Daniel Ransom", email="02masseur.alibis@icloud.com" },
]
description = "Utilities for the Fyodorov AI suite"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "asyncio",
    "PyJWT",
    "starlette",
    "supabase",
    "gotrue>=2",
    "pydantic>=2.11.3",
    "fyodorov_llm_agents==0.4.98",
]

[project.urls]
Homepage = "https://github.com/FyodorovAI/fyodorov-utils"
Issues = "https://github.com/FyodorovAI/fyodorov-utils/issues"

[tool.setuptools.packages.find]
where = ["src"]
